# StataAgent

./: .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CR_Problem.md  PLAN.md  Requirements.md  claude-progress.md  doc-example.md  feature_list.json  langgraph.json  pyproject.toml  pyrightconfig.json
.claude/: settings.local.json
.github/hooks/: stataagent-workflow.json
.github/workflows/: harness.yml
docs/: README.md  context-harness.md
docs/engineering/: 2026-03-24-agent-harness-implementation-plan.md  agent-harness.md  test-layering.md
docs/product/: empirical-analysis-workflow-v2.md  empirical-analysis-workflow.md  research-workflow.md
docs/references/: CSMAR_PYTHON.md  Harness-engineering.md
src/stata_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  logging.py
tests/: conftest.py  live_api_support.py  test_agent_graph.py  test_bootstrap.py  test_data_contract_builder.py  test_phase1_orchestrator.py  test_probe_executor.py  test_requirement_parser.py  test_variable_mapper.py  test_variable_requirements_builder.py  test_workflow_orchestrator.py
tests/architecture/: test_boundary_contracts.py  test_harness_cli.py  test_harness_scope_defaults.py  test_harness_taste_rules.py  test_import_contracts.py  test_legacy_mapping_cleanup.py  test_module_layout.py  test_quality_gates.py  test_rule_boundaries.py  test_rule_taste.py  test_toolchain_files.py
tests/core_workflow/: test_workflow_audit_access.py  test_workflow_orchestrator.py  test_workflow_subgraph_streaming.py
tests/entrypoints/: test_agent_graph.py  test_bootstrap.py  test_csmar_mcp_runtime.py  test_gateway_approval_payload.py  test_settings.py
tests/s1_feasibility/: phase1_subgraph_artifacts.py  test_probe_executor.py  (+20 more)
tools/: run_import_linter.py  run_quality_gates.py
(+130 files in other folders)
