[project]
name = "stata-agent"
version = "0.1.0"
description = "Local empirical-analysis agent for Stata workflows"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.24,<2.0",
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langchain-community>=0.4,<0.5",
    "langgraph>=1.0,<2.0",
    "langsmith>=0.3,<1.0",
    "pydantic>=2.11,<3.0",
    "pydantic-settings>=2.8,<3.0",
    "rich>=14.0,<15.0",
    "typer>=0.16,<1.0",
    "langgraph-cli[inmem]>=0.4.19",
    "langgraph-sdk>=0.3.12",
]

[project.scripts]
stata-agent = "stata_agent.interfaces.cli:main"

[dependency-groups]
dev = [
    "import-linter>=2.3,<3.0",
    "pre-commit>=4.2,<5.0",
    "pyright>=1.1.400,<2.0",
    "pytest>=8.3,<9.0",
    "ruff>=0.11.0,<1.0",
]

[build-system]
requires = ["hatchling>=1.27,<2.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stata_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
